// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ui/Button snapshot — danger large with icon 1`] = `
<button
  class="btn btnDanger btnLg"
  type="button"
>
  <span
    class="btnIcon"
  >
    <span>
      X
    </span>
  </span>
  <span
    class="btnLabel"
  >
    Delete
  </span>
</button>
`;

exports[`ui/Button snapshot — default primary md 1`] = `
<button
  class="btn btnPrimary btnMd"
  type="button"
>
  <span
    class="btnLabel"
  >
    Snap
  </span>
</button>
`;
